fix the "Showing xx of xx events" paragraph spacing

--- a/assets/scss/calendar/_buttons.scss
+++ b/assets/scss/calendar/_buttons.scss
@@ -44,6 +44,10 @@
 // Event Pool
 // ========================================
 
+.unical-calendar__event-pool p{
+  margin:0px;
+}
+
 .unical-calendar__event-pool {
 
   @media (min-width: 400px) {
